--- a/index.html
+++ b/index.html
@@ -316,29 +316,26 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
-	
-	  <div class="publication">
-            <img src="logo/Flare7k.gif" onmouseover="this.src='logo/Flare7k.gif';" onmouseout="this.src='logo/Flare7k.gif';" class="publogo"  width="300 px">
+		  <div class="publication">
+            <img src="logo/decay.png" onmouseover="this.src='logo/decay.png';" onmouseout="this.src='logo/decay.png';" class="publogo"  width="300 px">
             <p> 
                 <strong>
-                    <a href="">Flare7K: A Phenomenological Nighttime Flare Removal Dataset</a>
+                    <a href="">Deep Fourier Up-Sampling</a>
                 </strong>
 		  <br> 
-		<em><b>NeurIPS-Datasets and Benchmarks track, 2022</b></em>
+		<em><b>NeurIPS, 2022</b></em>
                 <br> 
-               Yuekun Dai, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
+              Man Zhou, Hu Yu, Jie Huang, Feng Zhao, Jinwei Gu, Chen Change Loy, Deyu Meng, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
-		    <a href="https://nukaliad.github.io/projects/Flare7K">Project Page</a>| 	
-		    <a href="https://drive.google.com/file/d/1PPXWxn7gYvqwHX301SuWmjI7IUUtqxab/view">Dataset</a>|
-		  <a href="https://www.youtube.com/watch?v=CR3VFj4NOQM&feature=youtu.be">Video</a>
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
                 </span>
             </p>
           </div>
           <br>
           <br>
-	<br />
 	<br />
 	<br />
 	
@@ -368,6 +365,56 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
        <br />
        <br />
 	<br />
+	
+		  <div class="publication">
+            <img src="logo/filter.png" onmouseover="this.src='logo/filter.png';" onmouseout="this.src='logo/filter.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Panchromatic and Multispectral Image Fusion via Alternating Reverse Filtering Network</a>
+                </strong>
+		  <br> 
+		<em><b>NeurIPS, 2022</b></em>
+                <br> 
+              Keyu Yan, Man Zhou, Jie Huang, Chengjun Xie, Feng Zhao, <b>Chongyi Li</b>, Danfeng Hong.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	  <div class="publication">
+            <img src="logo/Flare7k.gif" onmouseover="this.src='logo/Flare7k.gif';" onmouseout="this.src='logo/Flare7k.gif';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Flare7K: A Phenomenological Nighttime Flare Removal Dataset</a>
+                </strong>
+		  <br> 
+		<em><b>NeurIPS-Datasets and Benchmarks track, 2022</b></em>
+                <br> 
+               Yuekun Dai, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="https://nukaliad.github.io/projects/Flare7K">Project Page</a>| 	
+		    <a href="https://drive.google.com/file/d/1PPXWxn7gYvqwHX301SuWmjI7IUUtqxab/view">Dataset</a>|
+		  <a href="https://www.youtube.com/watch?v=CR3VFj4NOQM&feature=youtu.be">Video</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	<br />
+	
+
 	
 
 
