--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 		  <div class="publication">
-            <img src="logo/decay.png" onmouseover="this.src='logo/decay.png';" onmouseout="this.src='logo/decay.png';" class="publogo"  width="300 px">
+            <img src="logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif" onmouseover="this.src='logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif';" onmouseout="this.src='logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">Deep Fourier Up-Sampling</a>
