--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
-	  <div class="publication">
+<!--	
+	<div class="publication">
  <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/BeautyREC.mp4"> <source src="logo/BeautyREC.mp4" type="video/mp4"></video>                
 <!--<img src="logo/BeautyREC.jpg" onmouseover="this.src='logo/BeautyREC.jpg';" onmouseout="this.src='logo/BeautyREC.jpg';" class="publogo"  width="300 px">-->
             <p> 
@@ -316,7 +317,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
-		  <div class="publication">
+-->		  <div class="publication">
             <img src="logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif" onmouseover="this.src='logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif';" onmouseout="this.src='logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif';" class="publogo"  width="300 px">
             <p> 
                 <strong>
