--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <!--	
 	<div class="publication">
  <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/BeautyREC.mp4"> <source src="logo/BeautyREC.mp4" type="video/mp4"></video>                
-<!--<img src="logo/BeautyREC.jpg" onmouseover="this.src='logo/BeautyREC.jpg';" onmouseout="this.src='logo/BeautyREC.jpg';" class="publogo"  width="300 px">-->
+<img src="logo/BeautyREC.jpg" onmouseover="this.src='logo/BeautyREC.jpg';" onmouseout="this.src='logo/BeautyREC.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">BeautyREC: Robust, Efficient, and Content-preserving Makeup Transfer</a>
@@ -293,7 +293,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
-
+-->
+	<!--
    <div class="publication">
             <img src="logo/R2D2_input.jpg" onmouseover="this.src='logo/R2D2_ours.jpg';" onmouseout="this.src='logo/R2D2_input.jpg';" class="publogo"  width="300 px">
             <p> 
