--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
          <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/film-enhancement-codeformer.mp4"> <source src="logo/film-enhancement-codeformer.mp4" type="video/mp4"></video>    
 	<p> 
                 <strong>
-                    <a href="">Towards Robust Blind Face Restoration with Codebook Lookup TransFormer</a>
+                    <a href="">Towards Robust Blind Face Restoration with Codebook Lookup Transformer</a>
                 </strong>
 		  <br> 
 		<em><b>NeurIPS, 2022</b></em>
