--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/10 --We release our LEDNet code and dataset (ECCV 2022) </li>
 <li> 2022/09 --Three papers hit on <strong>NeurIPS 2022</strong>+one paper hits on <strong>NeurIPS 2022-Datasets and Benchmarks track</strong></li>
-<li> 2022/09 --One paper has been accepted by <strong>TCSVT</strong></li>
 <li> 2022/08 --ZeroDCE++ is included in the list of <strong>Popular TPAMI Articles</strong></li>
 <li> 2022/07 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/07 --Our paper Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement has been recognized as <strong>2020 Pattern Recognition Best Paper Honourable Mention.</strong></li>
@@ -145,9 +145,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <li> 2022/05 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/05 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Journal of Oceanic Engineering (IF: 3.554).</strong></li>
 <li> 2022/04 --Our team Feedforward won the <strong>second runner-up (3/317)</strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising</font></a>. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
-<li> 2022/04 --One paper has been accepted by <strong>TCYB</strong></li>
 <li> 2022/03 --Our ECCV 2022 Workshop coupled with challenges: <strong>Mobile Intelligent Photography & Imaging</strong> has been accepted. <a href="http://mipi-challenge.org/" target="_blank"><font color="#ff0000">(http://mipi-challenge.org/)</font></a></li>
-<li> 2022/03 --One paper has been accepted by <strong>TCSVT</strong></li>
 <li> 2022/03 --One paper has been accepted by <strong>CVPR 2022</strong></li>
 <li> 2022/02 --I am homored to be recognised as the <strong>Outstanding Reviewer</strong> of the IEEE Journal of Oceanic Engineering.</li>
 <li> 2022/01 --One paper has been recognized as <strong>ESI Hot Paper</strong></li>
@@ -433,8 +431,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <span class="links">
                     <a href="https://arxiv.org/pdf/2202.03373.pdf">PDF</a>| 
 		    <a href="https://shangchenzhou.com/projects/LEDNet/">Project Page</a>| 	
-                    <a href="https://shangchenzhou.com/projects/LEDNet//">Code</a>|
-		    <a href="https://shangchenzhou.com/projects/LEDNet//">Dataset</a>
+                    <a href="https://github.com/sczhou/LEDNet/">Code</a>|
+		    <a href="https://drive.google.com/drive/folders/11HcsiHNvM7JUlbuHIniREdQ2peDUhtwX//">Dataset</a>
                 </span>
             </p>
           </div>
