--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 	<div class="publication">
-            <img src="logo/haze_input.jpg" onmouseover="this.src='logo/haze_result.jpg';" onmouseout="this.src='logo/haze_input.jpg';" class="publogo"  width="300 px">
+             <a href="https://imgsli.com/MTI4ODE4"><img src="logo/DeHamer.jpg" onmouseover="this.src='logo/DeHamer.jpg';" onmouseout="this.src='logo/DeHamer.jpg';" class="publogo"  width="300 px"></a>
             <p> 
                 <strong>
                     <a href="">Image Dehazing Transformer with Transmission-Aware 3D Position Embedding</a>
