--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 	  <div class="publication">
-            <img src="logo/UDC_syn_LQ5.jpg" onmouseover="this.src='logo/UDC_syn_GT5.jpg';" onmouseout="this.src='logo/UDC_syn_LQ5.jpg';" class="publogo"  width="300 px">
+            <a href="https://imgsli.com/MTI4ODIz"><img src="logo/UDC.jpg" onmouseover="this.src='logo/UDC.jpg';" onmouseout="this.src='logo/UDC.jpg';" class="publogo"  width="300 px"></a>
             <p> 
                 <strong>
                     <a href="">Removing Diffraction Image Artifacts in Under-Display Camera via Dynamic Skip Connection Network</a>
