--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/10 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/10 --We release our LEDNet code and dataset (ECCV 2022) </li>
 <li> 2022/09 --Three papers hit on <strong>NeurIPS 2022</strong>+one paper hits on <strong>NeurIPS 2022-Datasets and Benchmarks track</strong></li>
 <li> 2022/08 --ZeroDCE++ is included in the list of <strong>Popular TPAMI Articles</strong></li>
