--- a/index.html
+++ b/index.html
@@ -560,7 +560,30 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
-	
+
+<div class="publication">
+           <img src="logo/CIR-Net_logo.JPG" onmouseover="this.src='logo/CIR-Net_logo.JPG';" onmouseout="this.src='logo/CIR-Net_logo.JPG';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">CIR-Net: Cross-modality Interaction and Refinement for RGB-D Salient Object Detection</a>
+                </strong>
+		  <br> 
+		<em><b>TIP, 2022</b></em>
+                <br> 
+              Runmin Cong, Qinwei Lin, Chen Zhang, <b>Chongyi Li<sup>+</sup></b>, Xiaochun Cao, Qingming Huang, and Yao Zhao.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="https://rmcong.github.io/proj_CIRNet.html/">Project Page</a>| 	
+                    <a href="https://github.com/rmcong/CIRNet_TIP2022">Code</a>	
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+		 
 <div class="publication">
            <img src="logo/TCYB2022 _input.jpg" onmouseover="this.src='logo/TCYB2022_output.jpg';" onmouseout="this.src='logo/TCYB2022 _input.jpg';" class="publogo"  width="300 px">
             <p> 
