--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
-		    <a href="https://rmcong.github.io/proj_CIRNet.html/">Project Page</a>| 	
+		    <a href="https://rmcong.github.io/proj_CIRNet.html">Project Page</a>| 	
                     <a href="https://github.com/rmcong/CIRNet_TIP2022">Code</a>	
                 </span>
             </p>
