--- a/FourierUp_files/index.html
+++ b/FourierUp_files/index.html
@@ -191,7 +191,7 @@
         <table>
           <tr>
             <div style="text-align: center; vertical-align:middle">
-              <img src="src/Tables.png" width="850">
+              <img src="src/tables.png" width="850">
             </div>
           </tr>
           <tr>
