--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
               Man Zhou, Hu Yu, Jie Huang, Feng Zhao, Jinwei Gu, Chen Change Loy, Deyu Meng, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://arxiv.org/abs/2210.05171">PDF</a>| 
+		    <a href="https://li-chongyi.github.io/FourierUp_files/">Project Page</a>| 	
+                    <a href="https://github.com/manman1995/Deep-Fourier-Upsampling">Code</a>
                 </span>
             </p>
           </div>
@@ -401,7 +401,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                Yuekun Dai, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
+                    <a href="https://arxiv.org/abs/2210.06570">PDF</a>| 
 		    <a href="https://nukaliad.github.io/projects/Flare7K">Project Page</a>| 	
 		    <a href="https://drive.google.com/file/d/1PPXWxn7gYvqwHX301SuWmjI7IUUtqxab/view">Dataset</a>|
 		  <a href="https://www.youtube.com/watch?v=CR3VFj4NOQM&feature=youtu.be">Video</a>
