--- a/index.html
+++ b/index.html
@@ -1170,10 +1170,10 @@ Frontiers in Signal Processing</br>
 <br><strong>Area Chair</strong></br>
 BMVC 2022</br>
 
-<br><strong>Session Chair</strong></br>
+<br><strong>Co-organizer</strong></br>
 ECCV Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2022</br>
 IEEE Workshop on Multimedia Signal Processing (MMSP) 2022</br>
-Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019</br>
+<!--Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019</br>-->
 
 <br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
 AAAI 2022, 2023</br>
