--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/10 --I am recognized as <strong>Outstanding Reviewer</strong>, ECCV 2022</li>
 <li> 2022/10 --I am homored to be recognised as the <strong>World’s Top 2% Scientists (2022)</strong>. It is compiled by Stanford University based on the standardized citation indicators, which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4" target="_blank"><font color="#ff0000">Mendeley Database</font></a></li>
 <li> 2022/10 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/10 --We release our LEDNet code and dataset (ECCV 2022) </li>
@@ -1131,6 +1132,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <li><strong>World’s Top 2% Scientists (2022)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2021_pubs_since_1788_wopp_extracted_202209), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
 <li><strong>World’s Top 2% Scientists (2021)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
 <!--<<li>2021 Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China. Runners-up Award. <a href="PDF/postdoc_runner-up.jpg"  target="_blank">PDF</a></li>-->
+<li>ECCV (Outstanding Reviewer in 2022). <a href="https://eccv2022.ecva.net/program/outstanding-reviewers/"  target="_blank">PDF</a></li>
 <li>ICCV (Outstanding Reviewer in 2021). <a href="http://iccv2021.thecvf.com/outstanding-reviewers"  target="_blank">PDF</a></li>
 <li>CVPR (Outstanding Reviewer in 2021). <a href="http://cvpr2021.thecvf.com/node/184"  target="_blank">PDF</a></li>
 <li>IEEE Journal of Oceanic Engineering (Outstanding Reviewer in 2021) <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9756533">News</a></li>
