--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@ li, ul {font-weight: normal;}
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
 <p class="view"><a href="datasets.html">Datasets</a></p>
+<li class="list-inline-item">
+                        <a href="https://github.com/sczhou/" target="_blank">
+                            <img src="assets/img/github.png" alt="Github">
+                        </a>
+</li>
 <!--<p class="view"><a href="sub_projects.html">Projects</a></p>-->
 </header>
 
