--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ li, ul {font-weight: normal;}
 <p class="view"><a href="sub_publication.html">Publications</a></p>
 <p class="view"><a href="datasets.html">Datasets</a></p>
 <li class="list-inline-item">
-                        <a href="https://github.com/sczhou/" target="_blank">
-                            <img src="assets/img/github.png" alt="Github">
+                        <a href="https://github.com/Li-Chongyi/" target="_blank">
+                            <img src="logo/github.png" alt="Github">
                         </a>
 </li>
 <!--<p class="view"><a href="sub_projects.html">Projects</a></p>-->
