--- a/index.html
+++ b/index.html
@@ -70,9 +70,14 @@ li, ul {font-weight: normal;}
 <p class="view"><a href="sub_publication.html">Publications</a></p>
 <p class="view"><a href="datasets.html">Datasets</a></p>
 <li class="list-inline-item">
-                        <a href="https://github.com/Li-Chongyi/" target="_blank">
-                            <img src="logo/github.png" alt="Github">
-                        </a>
+<a href="https://github.com/Li-Chongyi/" target="_blank">
+<img src="logo/github.png" alt="Github">
+</a>
+<li class="list-inline-item">
+<a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">
+<img src="logo/google-scholar.png" alt="Google Scholar">
+</a>
+			    
 </li>
 <!--<p class="view"><a href="sub_projects.html">Projects</a></p>-->
 </header>
