--- a/index.html
+++ b/index.html
@@ -66,19 +66,28 @@ li, ul {font-weight: normal;}
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
 </p> <br>
-<p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
-<p class="view"><a href="sub_publication.html">Publications</a></p>
-<p class="view"><a href="datasets.html">Datasets</a></p>
+
 <li class="list-inline-item">
 <a href="https://github.com/Li-Chongyi/" target="_blank">
 <img src="logo/github.png" alt="Github">
 </a>
+</li>	
 <li class="list-inline-item">
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">
 <img src="logo/google-scholar.png" alt="Google Scholar">
 </a>
-			    
 </li>
+<li class="list-inline-item">
+<a href="https://twitter.com/lichongyi" target="_blank">
+<img src="logo//twitter_logo.png" alt="Twitter">
+</a>
+</li>
+	
+<p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
+<p class="view"><a href="sub_publication.html">Publications</a></p>
+<p class="view"><a href="datasets.html">Datasets</a></p>
+
+	
 <!--<p class="view"><a href="sub_projects.html">Projects</a></p>-->
 </header>
 
