--- a/index.html
+++ b/index.html
@@ -66,22 +66,27 @@ li, ul {font-weight: normal;}
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
 </p> <br>
-
+	
+<ul class="list-inline">
 <li class="list-inline-item">
 <a href="https://github.com/Li-Chongyi/" target="_blank">
 <img src="logo/github.png" alt="Github">
 </a>
-</li>	
+</li>
+<br> 
 <li class="list-inline-item">
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">
 <img src="logo/google-scholar.png" alt="Google Scholar">
 </a>
 </li>
+<br> 
 <li class="list-inline-item">
 <a href="https://twitter.com/lichongyi" target="_blank">
 <img src="logo//twitter_logo.png" alt="Twitter">
 </a>
 </li>
+</ul>
+<br> 
 	
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
