--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 	  <div class="publication">
-            <img src="logo/Flare7k.gif" onmouseover="this.src='logo/Flare7k.gif';" onmouseout="this.src='logo/Flare7k.gif';" class="publogo"  width="300 px">
+            <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/7K_flare.mp4"> <source src="logo/7K_flare.mp4" type="video/mp4"></video>    
             <p> 
                 <strong>
                     <a href="">Flare7K: A Phenomenological Nighttime Flare Removal Dataset</a>
