--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/11 --Excited to announce two papers have been accepted by NeurIPS 2022 as <strong>Spotlight</strong>!</li>
 <li> 2022/10 --I am recognized as <strong>Outstanding Reviewer</strong>, ECCV 2022</li>
 <li> 2022/10 --I am homored to be recognised as the <strong>World’s Top 2% Scientists (2022)</strong>. It is compiled by Stanford University based on the standardized citation indicators, which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4" target="_blank"><font color="#ff0000">Mendeley Database</font></a></li>
 <li> 2022/10 --One paper has been accepted by <strong>TIP</strong></li>
@@ -332,7 +333,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Deep Fourier Up-Sampling</a>
                 </strong>
 		  <br> 
-		<em><b>NeurIPS, 2022</b></em>
+		<em><b>NeurIPS, 2022 (Spotlight)</b></em>
                 <br> 
               Man Zhou, Hu Yu, Jie Huang, Feng Zhao, Jinwei Gu, Chen Change Loy, Deyu Meng, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
@@ -379,7 +380,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Panchromatic and Multispectral Image Fusion via Alternating Reverse Filtering Network</a>
                 </strong>
 		  <br> 
-		<em><b>NeurIPS, 2022</b></em>
+		<em><b>NeurIPS, 2022 (Spotlight)</b></em>
                 <br> 
               Keyu Yan, Man Zhou, Jie Huang, Chengjun Xie, Feng Zhao, <b>Chongyi Li</b>, Danfeng Hong.
                 <br>
@@ -402,7 +403,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Flare7K: A Phenomenological Nighttime Flare Removal Dataset</a>
                 </strong>
 		  <br> 
-		<em><b>NeurIPS-Datasets and Benchmarks track, 2022</b></em>
+		<em><b>NeurIPS, 2022</b></em>
                 <br> 
                Yuekun Dai, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
                 <br>
