--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Deep Fourier Up-Sampling</a>
                 </strong>
 		  <br> 
-		<em><b>NeurIPS, 2022 (Spotlight)</b></em>
+		<em><b>NeurIPS, 2022 <a href="" target="_blank"><font color="#ff0000">[Spotlight]</font></a></b></em>
                 <br> 
               Man Zhou, Hu Yu, Jie Huang, Feng Zhao, Jinwei Gu, Chen Change Loy, Deyu Meng, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
@@ -380,7 +380,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Panchromatic and Multispectral Image Fusion via Alternating Reverse Filtering Network</a>
                 </strong>
 		  <br> 
-		<em><b>NeurIPS, 2022 (Spotlight)</b></em>
+		<em><b>NeurIPS, 2022 <a href="" target="_blank"><font color="#ff0000">[Spotlight]</font></a></b></em>
                 <br> 
               Keyu Yan, Man Zhou, Jie Huang, Chengjun Xie, Feng Zhao, <b>Chongyi Li</b>, Danfeng Hong.
                 <br>
