--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense attention fluid network for salient object detection in optical remote sensing images</a>
                 </strong>
 		     <br>
-		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper & ESI Hot Paper]</font></a></b></em>
+		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper &  ESI Highly Cited Paper]</font></a></b></em>
                 <br>
                 Qijian Zhang, Runmin Cong, <b>Chongyi Li</b>, Ming-Ming Cheng, Yuming Fang, Xiaochun Cao, Yao Zhao, and Sam Kwong.
                 <br>
