--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/pdf/2208.06857.pdf">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+		    <a href="https://github.com/RQ-Wu/UnderwaterRanker">Project Page</a>| 	
+                    <a href="https://github.com/RQ-Wu/UnderwaterRanker">Code</a>
                 </span>
             </p>
           </div>
