--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
-<li> 2022/11 --One paper got accepted by <strong>AAAI 2023</strong></li>
+<li> 2022/11 --One paper got accepted by <strong>AAAI 2023</strong>. The code is released. </li>
 <li> 2022/11 --Excited to announce two papers have been accepted by NeurIPS 2022 as <strong>Spotlight</strong>!</li>
 <li> 2022/10 --I am recognized as <strong>Outstanding Reviewer</strong>, ECCV 2022</li>
 <li> 2022/10 --I am homored to be recognised as the <strong>World’s Top 2% Scientists (2022)</strong>. It is compiled by Stanford University based on the standardized citation indicators, which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4" target="_blank"><font color="#ff0000">Mendeley Database</font></a></li>
