--- a/index.html
+++ b/index.html
@@ -1245,6 +1245,7 @@ AAAI 2022, 2023</br>
 <li><a href="https://emojipedia.org/"><font color="#1C86EE">Emojipedia</font></a></li>
 <li><a href="https://film-grab.com/"><font color="#1C86EE">FilmGrab</font></a></li>
 <li><a href="https://deviparikh.medium.com/how-we-write-rebuttals-dc84742fece1/"><font color="#1C86EE">How we write rebuttals</font></a></li>
+<li><a href="http://www-net.cs.umass.edu/kurose/writing/intro-style.html"><font color="#1C86EE">Writing a good introduction</font></a></li>
 <li><a href="https://www.computer.org/publications/tech-news/trends/deep-learning-vs-machine-learning-whats-the-difference?source=cssocial"><font color="#1C86EE">Deep Learning vs Machine Learning: What’s the Difference</font></a></li>
 </ul>
 <br>
