--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
-<!--	
+	
 	<div class="publication">
  <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/BeautyREC.mp4"> <source src="logo/BeautyREC.mp4" type="video/mp4"></video>                
 <img src="logo/BeautyREC.jpg" onmouseover="this.src='logo/BeautyREC.jpg';" onmouseout="this.src='logo/BeautyREC.jpg';" class="publogo"  width="300 px">
@@ -294,8 +294,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+		    <a href="https://li-chongyi.github.io/BeautyREC_files/">Project Page</a>| 	
+                    <a href="https://li-chongyi.github.io/BeautyREC_files/">Code</a>
                 </span>
             </p>
           </div>
@@ -303,7 +303,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
--->
+
 	<!--
    <div class="publication">
             <img src="logo/R2D2_input.jpg" onmouseover="this.src='logo/R2D2_ours.jpg';" onmouseout="this.src='logo/R2D2_input.jpg';" class="publogo"  width="300 px">
