--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
               Qixin Yan, Chunle Guo, Jixin Zhao, Yuekun Dai, Chen Change Loy, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
+                    <a href="https://arxiv.org/abs/2212.05855">PDF</a>| 
 		    <a href="https://li-chongyi.github.io/BeautyREC_files/">Project Page</a>| 	
                     <a href="https://li-chongyi.github.io/BeautyREC_files/">Code</a>
                 </span>
