--- a/BeautyREC_files/index.html
+++ b/BeautyREC_files/index.html
@@ -171,9 +171,9 @@ We also contribute \textbf{BeautyFace}, a makeup transfer dataset to supplement 
           <tr>
             <td width="50%">
               <center>
-                <a href="" target="_blank" class="imageLink"><img
+                <a href="https://arxiv.org/abs/2212.05855" target="_blank" class="imageLink"><img
                     src="./src/thumbnail.png" , height="120"></a><br><br>
-                <a href="" disabled target="_blank">Paper</a>
+                <a href="https://arxiv.org/abs/2212.05855" disabled target="_blank">Paper</a>
               </center>
             </td>
             <td width="30%" valign="middle">
