--- a/sub_publication.html
+++ b/sub_publication.html
@@ -183,6 +183,7 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Invited Talk:</h4>
 
 <ol>
+<li><strong>Valse Student Webinar 22-04</strong>. "面向底层视觉任务的基础算法"青年学者论坛. <a href="https://mp.weixin.qq.com/s/-sf-kSr66OGfZoBrVfXbzw" target="_blank"><font color="#ff0000">[Poster]</font></a><a href="https://space.bilibili.com/562085182/ " target="_blank"><font color="#ff0000">[Video (@bilibili in Chinese)],11/12/2022</a></li>
 <li><strong>Seeing in the Dark</strong>. Invited Talk, "师说新语，共话AI", SenseTime. <a href="logo/Seeing_in_the_dark_sensetime.png" target="_blank"><font color="#ff0000">[Poster] 25/11/2022</font></a></a></li>
 <li><strong>Comments on a paper in Nature Communications on Machine Learning</strong>. Invited by Connie Chang, SCIENTIFIC AMERICAN. <a href="https://www.scientificamerican.com/article/moons-hidden-depths-uncovered-with-new-algorithm/" target="_blank"><font color="#ff0000">[Article]</font></a>, February 2022 t></a></a></li>  Issue</font></a></a></li>    
 <li><strong>Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</strong>. Invited Talk, SenseTime. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/S-Lab-v2_sensetime_talk_lichongyi.pdf" target="_blank"><font color="#ff0000">[PPT]</font></a><a href="https://www.bilibili.com/video/BV1Gv411j7HN?p=2" target="_blank"><font color="#ff0000">[Talk Video (@bilibili in Chinese AI画质)], 23/04/2021</font></a></a></li>    
