--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	
 	  <div class="publication">
             <!--<img src="logo/codeformer1.jpg" onmouseover="this.src='logo/codeformer2.jpg';" onmouseout="this.src='logo/codeformer1.jpg';" class="publogo"  width="300 px">-->
-         <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/film-enhancement-codeformer.mp4"> <source src="logo/film-enhancement-codeformer.mp4" type="video/mp4"></video>    
+         <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/Coderformer_video2.mp4"> <source src="logo/Coderformer_video2.mp4" type="video/mp4"></video>    
 	<p> 
                 <strong>
                     <a href="">Towards Robust Blind Face Restoration with Codebook Lookup Transformer</a>
