--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>TIP, 2021 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
                 <br> 
-               <b>Chongyi Li</b>, Saeed Anwar, Junhui Hou, Runmin Cong, Chunle Guo, Wenqi Ren.
+               <b>Chongyi Li</b>, Saeed Anwar, Junhui Hou, etc.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/9426457">PDF</a>| 
