--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,8 @@ Frontiers in Signal Processing</br>
 BMVC 2022</br>
 
 <br><strong>Co-organizer</strong></br>
-ECCV Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2022</br>
+2nd CVPR Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2023</br>
+1st ECCV Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2022</br>
 IEEE Workshop on Multimedia Signal Processing (MMSP) 2022</br>
 <!--Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019</br>-->
 
