--- a/index.html
+++ b/index.html
@@ -1216,12 +1216,14 @@ AAAI 2022, 2023</br>
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supervision and Teaching:</h2>
 <ul>
-<li>Co-Supervisor, Ph.D.: Haoying Li (Zhejiang University),  Visiting Scholar: NeRF Editing, NTU, 08/2022-present</li>
-<li>Co-Supervisor, M.E.: Jixin Zhao (Tianjin University),  Intern: Video Denoising, NTU, 08/2022-present</li>
-<li>Co-Supervisor, B.E.: Yihang Luo (Nanyang Technological University),  Intern: Image Colorization, NTU, 08/2022-present</li>	
-<li>Co-Supervisor, M.E.: Zhexin Liang (Zhejiang University),  AI Major Project: Backlit Image Enhancement, NTU, 01/2022-present</li>	
-<li>Co-Supervisor, M.E.: Yuekun Dai (Peking University),  AI Major Project: Nighttime Flare Removal, NTU, 08/2021-present</li>
-<li>Co-Supervisor, M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU</li>
+<li>Ph.D.: Haoying Li (Zhejiang University),  Visiting Scholar: Old Films Restoration, NTU, 08/2022-present, Co-supervised with Cavan</li>
+<li>M.E.: Jixin Zhao (Tianjin University),  Intern: Video Denoising, NTU, 08/2022-present, Co-supervised with Cavan</li>
+<li>B.E.: Yihang Luo (Nanyang Technological University),  Intern: Nighttime Ghost Removal, NTU, 08/2022-present, Co-supervised with Cavan</li>	
+<li>M.E.: Zhexin Liang (Zhejiang University),  AI Major Project: Backlit Image Enhancement, NTU, 01/2022-present, Co-supervised with Cavan</li>		
+<li>M.E.: Yuekun Dai (Peking University),  AI Major Project: Nighttime Flare Removal, NTU, 08/2021-present, Co-supervised with Cavan</li>
+<li>Ph.D.: Jingming He, Underwater Object Detection, CityU, Co-supervised with Shiqi and Sam</li>
+<li>Ph.D.: Fuzhao Ou, Face Quality Assessment, CityU, Co-supervised with Shiqi and Sam</li>
+<li>M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU, Co-supervised with Saeed</li>	</li>
 
 <li>Teaching Assistant, NTU CE6126: MSAI Advanced Computer Vision, NTU, Fall 2020 </li>
 </ul>
