--- a/index.html
+++ b/index.html
@@ -1221,9 +1221,8 @@ AAAI 2022, 2023</br>
 <li>B.E.: Yihang Luo (Nanyang Technological University),  Intern: Nighttime Ghost Removal, NTU, 08/2022-present, Co-supervised with Cavan</li>	
 <li>M.E.: Zhexin Liang (Zhejiang University),  AI Major Project: Backlit Image Enhancement, NTU, 01/2022-present, Co-supervised with Cavan</li>		
 <li>M.E.: Yuekun Dai (Peking University),  AI Major Project: Nighttime Flare Removal, NTU, 08/2021-present, Co-supervised with Cavan</li>
-<li>Ph.D.: Jingming He, Underwater Object Detection, CityU, Co-supervised with Shiqi and Sam</li>
-<li>Ph.D.: Fuzhao Ou, Face Quality Assessment, CityU, Co-supervised with Shiqi and Sam</li>
-<li>M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU, Co-supervised with Saeed</li>	</li>
+<li>Ph.D.: Jingming He (Shenzhen University), Underwater Object Detection, CityU, Co-supervised with Shiqi and Sam</li>
+<li>Ph.D.: Fuzhao Ou (Guangzhou University), Face Image Quality Assessment, CityU, Co-supervised with Shiqi and Sam</li>
 
 <li>Teaching Assistant, NTU CE6126: MSAI Advanced Computer Vision, NTU, Fall 2020 </li>
 </ul>
@@ -1234,9 +1233,13 @@ AAAI 2022, 2023</br>
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Alumni:</h2>
 <ul>
+
 <li>Zurang Liu (Beijing University of Posts and Telecommunications), Project: Deep Image Harmonization, AI Master@NTU, 01/2021-04/2022, Now: Engineer@ByteDance, SG, Co-supervised with Cavan</li>
 <li>Sihao Chen, Project: Learning to See in the Dark <a href="https://drive.google.com/file/d/12Vu-n2Kw3DV3qa6VfOVTpbyy8TGfRIQz/view?usp=sharing">[Final Report--Video (A+)]</a>, FYP of Computer Science@NTU, 06/2020-06/2021, Now: Engineer@Shopee, SG. Sihao's project is awarded the <strong>2021 Global Undergraduate Awards</strong> for his entry 'Learning to See in the Dark - Low Light Image Enhancement'.  <a href="https://undergraduateawards.com/" target="_blank"><font color="#ff0000">[The Global Undergraduate Awards]</font></a><a href="https://www.ntu.edu.sg/scse/news-events/news/detail/scse-s-chen-sihao-(computer-science-year-4)-makes-a-historical-first-win-at-the-global-undergraduate-awards-2021" target="_blank"><font color="#ff0000">[NTU News]</font></a>Co-supervised with Cavan</li>
 <li>Qiming Ai (University of Science and Technology of China),  Project: Deep Photo Enhancement,  AI Master@NTU, 01/2020-12/2020, Co-supervised with Cavan</li>
+<li>M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU, Co-supervised with Saeed</li>	</li>
+<li>M.E.: Yuheng Shi (Nanjing University of Posts and Telecommunications),  Project: Hand Gesture Recognition, ANU, Co-supervised with Saeed</li>
+
 </ul>
 <br>
 <hr /> 
