--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
-<li> 2022/12 --Thrilled that our workshop "2nd mobile intelligent photography and imaging (MIPI)" got accetped to <strong>CVPR 2023</strong>! Stay tuned for details.</li> 
+<li> 2022/12 --Thrilled that our workshop "2nd mobile intelligent photography and imaging (MIPI)" got accetped to <strong>CVPR 2023</strong>! https://mipi-challenge.org/MIPI2023/.</li> 
 <li> 2022/12 --Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li> 
 <li> 2022/11 --One paper got accepted by <strong>AAAI 2023</strong>. The code is released. </li>
 <li> 2022/11 --Excited to announce two papers have been accepted by NeurIPS 2022 as <strong>Spotlight</strong>!</li>
@@ -1057,6 +1057,28 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Events:</h2>  
 
 <div class="publication">
+           <img src="./logo/MIPI_2023.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Mobile Intelligent Photography & Imaging</a>
+                </strong>
+		  <br> 
+		<em><b>2nd MIPI workshop @ CVPR 2023</b></em>
+                <br> 
+              <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng,  Yuekun Dai, Wenxiu Sun,  Chen Change Loy, and Jinwei Gu.
+                <br>
+                <span class="links">
+		      <a href="https://mipi-challenge.org/MIPI2023/">Website</a>	
+		      
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+
+<div class="publication">
             <img src="logo/codeformer1.jpg" onmouseover="this.src='logo/codeformer2.jpg';" onmouseout="this.src='logo/codeformer1.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
@@ -1108,7 +1130,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
               <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, Jun Jiang, Wenxiu Sun, Qingyu Yang, Qingpeng Zhu, Chen Change Loy, and Jinwei Gu.
                 <br>
                 <span class="links">
-		      <a href="http://mipi-challenge.org/">Website</a>	
+		      <a href="https://mipi-challenge.org/MIPI2022/">Website</a>	
 		      
                 </span>
             </p>
