--- a/index.html
+++ b/index.html
@@ -1191,6 +1191,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 
 <ul>
 <br><strong>Associate Editor</strong></br>
+2023/01- : IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859)</br>
 2022/05- : IEEE Journal of Oceanic Engineering (IF: 3.554)</br>
 2022/01- : Neurocomputing (IF: 5.719)</br>
 2021/01- : Springer Journal of Signal, Image and Video Processing (IF: 1.794)</br> 
