--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859).</strong></li>
+<!--
 <li> 2022/12 --Thrilled that our workshop "2nd mobile intelligent photography and imaging (MIPI)" got accetped to <strong>CVPR 2023</strong>! https://mipi-challenge.org/MIPI2023/.</li> 
 <li> 2022/12 --Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li> 
 <li> 2022/11 --One paper got accepted by <strong>AAAI 2023</strong>. The code is released. </li>
@@ -165,7 +167,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <li> 2022/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of Neurocomputing (IF: 5.719).</strong></li>
 <li> 2022/01 --Two papers are recognized as  <strong>Popular Documents</strong> <a href="https://ieeexplore.ieee.org/xpl/topAccessedArticles.jsp?punumber=83" target="_blank"><font color="#ff0000">(the 50 most frequently accessed documents)</font></a> in  <strong>IEEE Transactions on Image Processing</strong></li>
 <li> 2022/01 --I am homored to be recognised as the <strong>World’s Top 2% Scientists (2020)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database</font></a></li>
-<!--
+
 <li> 2021/12 --One paper has been accepted by <strong>IEEE Transactions on Geoscience and Remote Sensing  (IF: 5.6)</strong></li>
 <li> 2021/11 --One paper has been accepted by <strong>IEEE Transactions on Pattern Analysis and Machine Intelligence (IF: 17.861)</strong></li>
 <li> 2021/11 --I received the runners-up award of  <strong>Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China, 2021</strong>. </li>
