--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>2nd MIPI workshop @ CVPR 2023</b></em>
                 <br> 
-              <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng,  Yuekun Dai, Wenxiu Sun,  Chen Change Loy, and Jinwei Gu.
+              <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng,  Yuekun Dai, Qingpeng Zhu, Qianhui Sun,  Wenxiu Sun,  Chen Change Loy, and Jinwei Gu.
                 <br>
                 <span class="links">
 		      <a href="https://mipi-challenge.org/MIPI2023/">Website</a>	
