--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/01 --Excited to announce one paper has been accepted by AAAI 2023 as <strong>Oral</strong>!</li>
 <li> 2023/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859).</strong></li>
 <!--
 <li> 2022/12 --Thrilled that our workshop "2nd mobile intelligent photography and imaging (MIPI)" got accetped to <strong>CVPR 2023</strong>! https://mipi-challenge.org/MIPI2023/.</li> 
@@ -317,7 +318,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Underwater Ranker: Learn Which Is Better and How to Be Better</a>
                 </strong>
 		  <br> 
-		<em><b>AAAI, 2023</b></em>
+		<em><b>AAAI, 2023<a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
                 <br> 
               Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
