--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/01 --Excited to announce one paper has been accepted by ICLR 2023 as <strong>Oral, top 5%</strong>!</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by AAAI 2023 as <strong>Oral</strong>!</li>
 <li> 2023/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859).</strong></li>
 <!--
