--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
-<li> 2023/01 --Excited to announce one paper has been accepted by ICLR 2023 as <strong>Oral, top 5%</strong>!</li>
+<li> 2023/01 --Excited to announce one paper has been accepted by ICLR 2023 as <strong>Oral, notable-top-5%</strong>!</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by AAAI 2023 as <strong>Oral</strong>!</li>
 <li> 2023/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859).</strong></li>
 <!--
@@ -236,6 +236,31 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Selected Publications:</h2>
         <br>
 	
+		  <div class="publication">
+            <img src="logo/UDHFour.png" onmouseover="this.src='logo/UDHFour.png';" onmouseout="this.src='logo/UDHFour.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Embedding Fourier for Ultra-High-Definition Low-Light Image Enhancement</a>
+                </strong>
+		  <br> 
+		<em><b>ICLR, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
+                <br> 
+              <b>Chongyi Li</b>, Chunle Guo, Man Zhou, Zhexin Liang, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br>
+	<br />
+	<br />
+	<br />
+	
 	  <div class="publication">
             <img src="logo/Cudi.jpg" onmouseover="this.src='logo/Cudi.jpg';" onmouseout="this.src='logo/Cudi.jpg';" class="publogo"  width="300 px">
             <p> 
@@ -311,7 +336,9 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
--->		  
+-->		
+	
+
       <div class="publication">
             <img src="logo/URanker.png" onmouseover="this.src='logo/URanker.png';" onmouseout="this.src='logo/URanker.png';" class="publogo"  width="300 px">
             <p> 
