--- a/sub_publication.html
+++ b/sub_publication.html
@@ -61,7 +61,7 @@
 
 <ol>
 <li> <strong>Chongyi Li</strong>, Chunle Guo, Man Zhou, Zhexin Liang, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy, Embedding Fourier for Ultra-High-Definition Low-Light Image Enhancement, <strong><ud2>International Conference on Learning Representations (ICLR)</ud2></strong>, 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000">[Oral]</font></li>  
-<li> Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <strong>Chongyi Li<sup>+</sup></strong>, Underwater Ranker: Learn Which Is Better and How to Be Better, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2023. <a href="https://arxiv.org/pdf/2208.06857.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="https://github.com/RQ-Wu/UnderwaterRanker" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000">[Oral]</font></li>  
+<li> Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <strong>Chongyi Li<sup>+</sup></strong>, Underwater Ranker: Learn Which Is Better and How to Be Better, <strong><ud2>AAAI Conference on Artificial Intelligence (AAAI)</ud2></strong>, 2023. <a href="https://arxiv.org/pdf/2208.06857.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a><a href="https://li-chongyi.github.io/URanker_files/" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="#ff0000">[Oral]</font></li>  
 </ol>  
 
 <h4>
