--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@ li, ul {font-weight: normal;}
 </p>
  
 <h2>
+<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>IJCV Special Issue:</h2>
+<br><p><font color="blue">We organize a special issue on Mobile Intelligent Photography and Imaging in International Journal of Computer Vision (IJCV), guest edited by Chongyi Li, Mauricio Delbracio, Jinwei Gu, and Chen Change Loy. Access the CFP for more info on the issue & how to submit:  
+<a href="https://www.springer.com/journal/11263/updates/23967724 " target="_blank"><font color="#ff0000">[CFP]</font></a></font></p></br>
+
+</ul>
+<br>	
+
+<h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hiring:</h2>
 <br><p><font color="blue">We are looking for Research Fellow, Research Assistant, and Project Officer who want to conduct
 research and develop advanced deep learning algorithms for image and video enhancement and restoration, computational imaging, and image signal processor. <a href="https://www.mmlab-ntu.com/careers.html" target="_blank"><font color="#ff0000">[Join Us]</font></a></font></p></br>
@@ -133,6 +141,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/02 --We organize a special issue on Mobile Intelligent Photography and Imaging in <strong>International Journal of Computer Vision (IJCV)</strong>. https://www.springer.com/journal/11263/updates/23967724. (Paper submission deadline: 1 June 2023)</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by ICLR 2023 as <strong>Oral, notable-top-5%</strong>!</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by AAAI 2023 as <strong>Oral</strong>!</li>
 <li> 2023/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Transactions on Circuits and Systems for Video Technology (IF: 5.859).</strong></li>
@@ -1229,6 +1238,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 2021/01- : Springer Journal of Signal, Image and Video Processing (IF: 1.794)</br> 
 
 <br><strong>Guest Editor</strong></br>
+International Journal of Computer Vision (Lead Guest Editor) (IF: 13.369)</br>
 IEEE Journal of Oceanic Engineering (Lead Guest Editor) (IF: 3.554)</br>
 Signal Processing: Image Communication (Management Guest Editor) (IF：2.779)</br>
 Multimedia Tools and Applications (IF: 2.313)</br>
