--- a/index.html
+++ b/index.html
@@ -91,13 +91,32 @@ li, ul {font-weight: normal;}
 <hr />
 </p>
  
-<h2>
-<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>IJCV Special Issue:</h2>
-<br><p><font color="blue">We organize a special issue on Mobile Intelligent Photography and Imaging in International Journal of Computer Vision (IJCV), guest edited by Chongyi Li, Mauricio Delbracio, Jinwei Gu, and Chen Change Loy. Access the CFP for more info on the issue & how to submit:  
-<a href="https://www.springer.com/journal/11263/updates/23967724 " target="_blank"><font color="#ff0000">[CFP]</font></a></font></p></br>
+	  <div class="publication">
+           <img src="./logo/IJCV.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">IJCV Special Issue</a>
+                </strong>
+		  <br> 
+		<em><b>Special Issue on Mobile Intelligent Photography and Imaging</b></em>
+                <br> 
+              Chongyi Li, Mauricio Delbracio, Jinwei Gu, and Chen Change Loy
+                <br>
+                <span class="links">
+		      <a href="https://www.springer.com/journal/11263/updates/23967724/">CFP</a>	
+		      
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 
-</ul>
-<br>	
+
+
+
+
 
 <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hiring:</h2>
@@ -227,18 +246,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <br>
 <hr />
 
-<!--
-<h2>
-<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Low-Light Image Enhancement Platform: LLIE-Platform</h2>  
-  
-<ul>
-<li> Different deep models may be implemented in different platforms such as Caffe, Theano, TensorFlow, and PyTorch. As a result, different algorithms demand different configurations, GPU versions, and hardware specifications. Such requirements are prohibitive to many researchers, especially for beginners who are new to this area and may not even have GPU resources.</font></a></li>
-<li> To resolve these problems, we develop an online platform, LLIE-Platform <a href="http://mc.nankai.edu.cn/ll" target="_blank"><font color="#ff0000">[LLIE-Platform]</font></a>. 
-If you use this platform, please cite our paper "Low-Light Image and Video Enhancement Using Deep Learning: A Survey", TPAMI, 2021.</li>
-</ul>
-<br>
-<hr />
--->
+
 
 
 <div class="container">
