--- a/index.html
+++ b/index.html
@@ -496,7 +496,8 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="https://arxiv.org/pdf/2202.03373.pdf">PDF</a>| 
 		    <a href="https://shangchenzhou.com/projects/LEDNet/">Project Page</a>| 	
                     <a href="https://github.com/sczhou/LEDNet/">Code</a>|
-		    <a href="https://drive.google.com/drive/folders/11HcsiHNvM7JUlbuHIniREdQ2peDUhtwX//">Dataset</a>
+		    <a href="https://drive.google.com/drive/folders/11HcsiHNvM7JUlbuHIniREdQ2peDUhtwX//">Dataset</a>|
+	            <a href="https://replicate.com/sczhou/lednet/">Replicate Demo</a>
                 </span>
             </p>
           </div>
